[gd_scene load_steps=2 format=3 uid="uid://bkhlg1ar141n3"]

[ext_resource type="Script" uid="uid://kbst02ehx8dd" path="res://scenes/explore/forage.gd" id="1_5o668"]

[node name="MarginContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5o668")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="forageLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "foraging..."
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="navAgain" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "<forage again>"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="navBack" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "<back>"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
